// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Participant with admitted participant renders participant component with admitted message. 1`] = `
<div>
  <span
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Participant 1
  </span>
  <span
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    参加可能
  </span>
  <button
    onClick={[Function]}
  >
    キャンセル
  </button>
</div>
`;

exports[`Participant with waitlisted participant renders participant component with waitlisted message. 1`] = `
<div>
  <span
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    Participant 1
  </span>
  <span
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    キャンセル待ち
  </span>
  <button
    onClick={[Function]}
  >
    キャンセル
  </button>
</div>
`;
